--- a/pom.xml
+++ b/pom.xml
@@ -52,5 +52,7 @@
    		<maven.compiler.source>8</maven.compiler.source>
    		<maven.compiler.target>1.8</maven.compiler.target>
  	</properties>
-	
+	<properties>
+  		<sonar.organization>mohitkumar-github</sonar.organization>
+	</properties>
 </project>
